Project MCM_Private_Circle {
  database_type: 'MySQL'
  Note: 'MCM_ERD_v5 - MVP 최종 결정사항 반영본. AI 응대 브리프는 채팅/대화상자 기반이 아니라 방문별 간단 기록을 누적하고 재방문 시 AI가 요약해 보여주는 방식으로 사용한다.'
}

Enum brief_status {
  GENERATED
  FAILED
}

Enum interest_source_type {
  CUSTOMER
  CA
}

Table customer_accounts {
  id bigint [pk, increment]
  login_id varchar(100) [not null, unique]
  password_hash varchar(255) [not null]
  created_at datetime [not null]

  Note: '고객 모바일 앱 로그인 전용 계정'
}

Table employee_accounts {
  id bigint [pk, increment]
  login_id varchar(100) [not null, unique]
  password_hash varchar(255) [not null]
  created_at datetime [not null]

  Note: 'CA 직원용 로그인 전용 계정'
}

Table stores {
  id bigint [pk, increment]
  name varchar(150)
  location varchar(255)
  created_at datetime [not null]
}

Table customers {
  id bigint [pk, increment]
  customer_account_id bigint [not null, unique]
  customer_no varchar(50)
  name varchar(100)
  phone_number varchar(30)
  profile_image_url varchar(500)
  membership_grade varchar(50)
  qr_token varchar(255) [not null, unique]
  style_preferences json
  joined_at datetime [not null]
  created_at datetime [not null]

  Note: 'customer_accounts와 1:1로 연결되는 고객 프로필. 방문횟수, 스탬프 수, 최근 방문일은 visits와 visit_stamps 이력에서 계산한다.'
}

Table client_advisors {
  id bigint [pk, increment]
  employee_account_id bigint [not null, unique]
  store_id bigint
  name varchar(100)
  created_at datetime [not null]

  Note: 'employee_accounts와 1:1로 연결되는 CA 직원 프로필'
}

Table products {
  id bigint [pk, increment]
  product_code varchar(60)
  name varchar(200)
  category varchar(100)
  image_url varchar(500)
  price decimal(15,2)
  dpp_id varchar(100)
  is_recommendable boolean
  created_at datetime [not null]
}

Table customer_interest_products {
  id bigint [pk, increment]
  customer_id bigint
  product_id bigint
  source_type interest_source_type [not null]
  visit_record_id bigint
  memo varchar(500)
  saved_at datetime

  Note: '''
  관심 제품의 출처는 source_type으로 구분한다.
  CUSTOMER: 고객이 앱에서 직접 저장한 관심 제품이며 visit_record_id는 NULL.
  CA: CA가 방문 기록 작성 과정에서 확인한 관심 제품이며 visit_record_id에 해당 방문 기록 ID를 저장한다.
  source_type과 visit_record_id 조합의 유효성은 서비스 로직에서 검증한다.
  '''
}

Table visits {
  id bigint [pk, increment]
  customer_id bigint
  store_id bigint
  visited_at datetime

  Note: '''
  고객의 매장 방문 1회 단위를 저장한다.
  방문 생성 시 customers.visit_count와 customers.visit_date를 함께 갱신한다.
  '''
}

Table visit_records {
  id bigint [pk, increment]
  visit_id bigint
  customer_id bigint
  ca_id bigint
  visit_purpose varchar(255)
  content text
  style_change_note text
  caution_note text
  created_at datetime [not null]

  Note: '''
  기존 상담/채팅 내용을 저장하는 테이블이 아니라, 방문할 때마다 CA가 고객 정보를 간단히 남기는 방문 기록 테이블이다.

  기록 예시:
  - 방문 목적
  - 고객 반응
  - 관심 제품
  - 스타일 변화
  - 응대 시 주의사항
  - 다음 방문 시 참고할 내용

  ai_journey_briefs는 이 테이블의 누적 기록과 관심 제품, 구매 이력 등을 바탕으로 재방문 시 고객 응대 브리프를 생성한다.
  '''
}

Table purchase_history {
  id bigint [pk, increment]
  customer_id bigint
  product_id bigint
  store_id bigint
  visit_id bigint
  quantity int
  purchased_at datetime
}

Table visit_stamps {
  id bigint [pk, increment]
  visit_id bigint
  customer_id bigint
  issued_by_ca_id bigint
  stamp_type varchar(30)
  issued_at datetime
}

Table ai_journey_briefs {
  id bigint [pk, increment]
  customer_id bigint
  visit_id bigint
  requested_by_ca_id bigint
  summary text
  visit_purpose_summary text
  interest_summary text
  caution_summary text
  suggested_direction text
  source_visit_count int
  status brief_status
  generated_at datetime

  Note: '''
  재방문 고객 응대를 위한 AI 브리프 테이블.

  기존에 고려했던 방식:
  - 대화 상자를 통한 실시간 응대 브리프 제공
  - 채팅을 통한 고객 응대

  최종 변경 방식:
  - 고객이 방문할 때마다 visit_records에 간단한 고객 정보를 기록한다.
  - 고객이 재방문하면 AI가 과거 visit_records, 관심 제품, 구매 이력, 주의사항을 정리한다.
  - CA는 ai_journey_briefs를 통해 고객의 과거 맥락을 한눈에 확인하고 응대한다.

  visit_id는 브리프를 조회하거나 생성한 기준 방문을 의미한다.
  source_visit_count는 브리프 생성 시 참고한 과거 방문 기록 수를 저장한다.
  '''
}

/* =========================================
   Relationships
   ========================================= */

/* 변경: 고객 계정 - 고객 프로필 1:1 */
Ref: customer_accounts.id - customers.customer_account_id

/* 변경: 직원 계정 - CA 프로필 1:1 */
Ref: employee_accounts.id - client_advisors.employee_account_id

/* 기존 관계 유지 */
Ref: stores.id < client_advisors.store_id

Ref: customers.id < customer_interest_products.customer_id
Ref: products.id < customer_interest_products.product_id

/* 변경: 관심 제품 출처 및 방문 기록 연결 */
Ref: visit_records.id < customer_interest_products.visit_record_id

Ref: customers.id < visits.customer_id
Ref: stores.id < visits.store_id

/* 변경: 상담 테이블을 방문별 간단 기록 테이블로 변경 */
Ref: visits.id < visit_records.visit_id
Ref: customers.id < visit_records.customer_id
Ref: client_advisors.id < visit_records.ca_id

Ref: customers.id < purchase_history.customer_id
Ref: products.id < purchase_history.product_id
Ref: stores.id < purchase_history.store_id
Ref: visits.id < purchase_history.visit_id

Ref: visits.id < visit_stamps.visit_id
Ref: client_advisors.id < visit_stamps.issued_by_ca_id

Ref: customers.id < ai_journey_briefs.customer_id
Ref: visits.id < ai_journey_briefs.visit_id
Ref: client_advisors.id < ai_journey_briefs.requested_by_ca_id
Ref: customers.id < visit_stamps.customer_id